@@ -68,6 +68,14 @@ Available components:
 <tr>
  <td></td></tr>
 <tr bgcolor=#f0f0f0>
+ <td valign=top><tt>memorymapped</tt></td>
+ <td valign=top>stable</td>
+ <td valign=top>A base-class for memory-mapped components.</td>
+ <td valign=top></td>
+</tr>
+<tr>
+ <td></td></tr>
+<tr bgcolor=#e0e0e0>
  <td valign=top><tt>ram</tt></td>
  <td valign=top>stable</td>
  <td valign=top>A generic RAM component.</td>
