@@ -31,9 +31,10 @@ Available template machines:
  <td valign=top><a href="machines/machine_testmips.html"><tt>testmips</tt></a></td>
  <td valign=top>stable</td>
  <td valign=top>Experimental MIPS machine.<pre>  (unnamed machine)  [testmips]
-  |-- mainbus0
-  |   \-- ram0
-  \-- mips_cpu0  (100 MHz)
+  \-- mainbus0
+      |-- ram0  (32 MB at offset 0)
+      |-- rom0  (32 MB at offset 18446744072631615488)
+      \-- mips_cpu0  (100 MHz)
 </pre></td>
  <td valign=top></td>
 </tr>
